--- a/client/src/styles/tailwind.css
+++ b/client/src/styles/tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
+
+html {
+  @apply box-border;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  @apply text-dark;
+}
+
 @tailwind utilities;
